--- a/package.json
+++ b/package.json
@@ -8,8 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "@bem-react/classname": "^1.5.10",
     "next": "10.2.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "use-media": "^1.4.0"
+  },
+  "devDependencies": {
+    "@types/react": "^17.0.4",
+    "sass": "^1.32.12",
+    "typescript": "^4.2.4"
   }
 }
